# turn-engine

./: LICENSE  README.md  SETUP_GUIDE.md  cabal.project  output.txt  turn-engine.cabal
.github/: copilot-instructions.md  pull_request_template.md
.github/agents/: architect.agent.md  developer.agent.md  vanguard.agent.md
.github/prompts/: create-ticket.prompt.md  review-pr.prompt.md
app/: Main.hs
docs/: service-protocol.md
docs/jsonexamples/CursedTreasure/: create-new-game.request.json  create-new-game.response.json  enumerate-before-accept-curse.request.json  enumerate-before-accept-curse.response.json  enumerate-before-clue-play.request.json  enumerate-before-clue-play.response.json  enumerate-before-jeep-move.request.json  enumerate-before-jeep-move.response.json  enumerate-before-raise-treasure.request.json  enumerate-before-raise-treasure.response.json  enumerate-before-take-treasure.request.json  enumerate-before-take-treasure.response.json  enumerate-before-ward-curse.request.json  enumerate-before-ward-curse.response.json  enumerate-first.request.json  get-game-setup-players.request.json  get-game-setup-players.response.json  make-move-accept-curse.request.json  make-move-accept-curse.response.json  make-move-clue-play.request.json  make-move-clue-play.response.json  make-move-error.request.json  make-move-error.response.json  make-move-exchange-clue-cards.request.json  make-move-exchange-clue-cards.response.json  make-move-jeep.request.json  make-move-jeep.response.json  make-move-pass-treasure.request.json  make-move-pass-treasure.response.json  make-move-pass-turn.request.json  make-move-pass-turn.response.json  make-move-pickup-amulet.request.json  make-move-pickup-amulet.response.json  make-move-raise-treasure.request.json  make-move-raise-treasure.response.json  make-move-take-treasure.request.json  make-move-take-treasure.response.json  make-move-use-amulet-clue-play.request.json  make-move-use-amulet-clue-play.response.json  make-move-use-amulet-exchange-cards.request.json  (+7 more)
scripts/: package-release.ps1
src/: Lib.hs
src/App/: CLI.hs  DumbPlay.hs  Example.hs  Protocol.hs  Service.hs  TestExample.hs
src/App/VoxelVerse/: Protocol.hs  Service.hs
src/Game/: Logic.hs  Types.hs
src/Game/ArtOfWar/: API.hs  Types.hs
src/Game/ArtOfWar/VoxelVerse/: API.hs  Types.hs
src/Game/Core/: API.hs  Primitives.hs  Types.hs
src/Game/CursedTreasure/: API.hs  Types.hs
src/Game/CursedTreasure/VoxelVerse/: API.hs  Types.hs
src/Game/FogOfBattle/: API.hs  Types.hs
src/Game/FogOfBattle/VoxelVerse/: API.hs  Types.hs
src/Game/RealEstate/: API.hs  Types.hs
src/Game/RealEstate/VoxelVerse/: API.hs  Types.hs
src/Game/VoxelVerse/: API.hs  Layout.hs  Query.hs  Types.hs
test/: LibSpec.hs
test/App/: CLISpec.hs  ExampleSpec.hs  ProtocolSpec.hs  TestExampleSpec.hs
test/Game/: Arbitrary.hs
test/Game/Core/: APISpec.hs  PrimitivesSpec.hs
test/Game/CursedTreasure/: APISpec.hs  Arbitrary.hs
test/Game/VoxelVerse/: LayoutSpec.hs
