cabal-version:      3.4
name:               turn-engine
version:            0.1.0.0
synopsis:
    Backbone logic for computing GameState, legal moves, and VisibleGameState
    per player.
description:
    Also contains trainers for AI players.
license:            MIT
license-file:       LICENSE
author:             TBillTech
maintainer:         TBillTech
category:           Game
build-type:         Simple
extra-doc-files:    README.md
                    SETUP_GUIDE.md

-- A shared stanza imported by every component.
common common-options
    build-depends:
        base,
        relude,
        text
    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude),
        relude
    default-language:   GHC2021
    default-extensions:
        OverloadedStrings
        DeriveGeneric
        DeriveAnyClass
        LambdaCase
        OverloadedRecordDot
        NoFieldSelectors
        DuplicateRecordFields
    ghc-options: -Wall

library
    import:           common-options
    hs-source-dirs:   src
    exposed-modules:
        App.CLI
        App.DumbPlay
        App.Example
        App.Protocol
        App.Service
        App.TestExample
        Game.Logic
        Game.Types
        Game.Core.API
        Game.Core.Primitives
        Game.Core.Types
        Game.VoxelVerse.API
        Game.VoxelVerse.Query
        Game.VoxelVerse.Types
        Game.ArtOfWar.API
        Game.ArtOfWar.VoxelVerse.API
        Game.ArtOfWar.VoxelVerse.Types
        Game.CursedTreasure.API
        Game.CursedTreasure.Types
        Game.CursedTreasure.VoxelVerse.API
        Game.CursedTreasure.VoxelVerse.Types
        Game.FogOfBattle.API
        Game.FogOfBattle.Types
        Game.FogOfBattle.VoxelVerse.API
        Game.FogOfBattle.VoxelVerse.Types
        Game.RealEstate.API
        Game.ArtOfWar.Types
        Game.RealEstate.VoxelVerse.API
        Game.RealEstate.VoxelVerse.Types
        Game.RealEstate.Types
    build-depends:
        random ^>=1.3.1,
        microlens-platform,
        aeson >= 2.2,
        bytestring,
        transformers

executable turn-engine
    import:           common-options
    main-is:          Main.hs
    hs-source-dirs:   app
    autogen-modules:  Paths_turn_engine
    other-modules:    Paths_turn_engine
    build-depends:
        turn-engine

test-suite turn-engine-test
    import:           common-options
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    Game.Core.APISpec
                    , App.CLISpec
                    , App.ExampleSpec
                    , App.ProtocolSpec
                    , App.TestExampleSpec
                    , Game.Core.PrimitivesSpec
                    , Game.Arbitrary
                    , Game.CursedTreasure.Arbitrary
                    , Game.CursedTreasure.APISpec
    hs-source-dirs:   test
    build-depends:
        turn-engine,
        aeson >= 2.2,
        bytestring,
        hspec,
        hspec-discover,
        QuickCheck,
        random
    build-tool-depends: hspec-discover:hspec-discover
